Disable zero-copy DXGI video on NVIDIA GPUs

This seems to sometimes be causing videos to initially display black.

BUG=635319
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2314773003
Cr-Commit-Position: refs/heads/master@{#417148}

Former-commit-id: d47c4314fc4eb97082790714281b9e3cc5b45c9c